# qemu

hw/: meson.build
hw/gx/: Kconfig  README.md  dw_ahb_dmac.c  dw_ahb_dmac.h  dw_ahb_dmac_regs.h  dw_apb_rtc.c  dw_apb_uart.h  dw_apb_wdt.c  dw_apb_wdt.h  dw_apb_wdt_regs.h  dwc_emac.c  dwc_sdhc.c  dwc_sdhc.h  dwc_sdhc_regs.h  dwc_ssi.c  dwc_ssi_gx.c  dwc_ssi_gx.h  dwc_ssi_regs.h  gx_ahci.c  gx_ahci.h  gx_rtc.c  gx_rtc.h  gx_unimp.c  gx_unimp.h  gx_vega.c  gx_vega.h  gx_vega_syscfg.c  gx_virgo.c  gx_virgo.h  gx_virgo_acpi_build.c  meson.build
hw/nationalchip/: dw_apb_rtc.h  dw_apb_uart.c  dw_apb_uart_regs.h  dwc_emac.c  dwc_emac.h  dwc_ssi.h  gx_vega.c  gx_vega_syscfg.c  gx_vega_syscfg.h  gx_virgo.c  gx_virgo.h  meson.build
