arm_ss.add(files(
    'gx_unimp.c',
    'dw_ahb_dmac.c',
    'dw_apb_rtc.c',
    'dw_apb_uart.c',
    'dw_apb_wdt.c',
    'dwc_ssi.c',
    'dwc_emac.c',
#    'dwc_sdhc.c',
#    'gx_ahci.c',
    'gx_rtc.c',
    'gx_vega_syscfg.c',
))

arm_ss.add(files(
    'gx_virgo.c', # 'gx_virgo_acpi_build.c'
    'gx_vega.c',
))
